chore(docker): adicionar configuração de ambiente Docker